--- a/content/post/03-04-20_covid19_metadata.Rmd
+++ b/content/post/03-04-20_covid19_metadata.Rmd
@@ -28,6 +28,7 @@ Along the way, we realized that these data could prove valuable for many differe
 
 The project is, as of yet, ongoing, but it is exciting to see how Open Science plays into every aspect of it, from conception to execution, collaboration, and deliverable output. Key insights provided by WORCS-contributor [Barbara Vreede](https://www.uu.nl/staff/BMIVreede) - like adding a clear `README.md` file, a `license.md`, and linking the licenses of the data sources we use - make all the difference when you're trying to create a repository that people can use (and are legally allowed to). Finally, working with a diverse team of data scientists is an excellent learning experience, as everyone brings their own expertise to the table.
 
-Here is the repository in its current form; if you are looking to use these data for research - go ahead, and do reach out if you need support in using it!
+[Here is the repository in its current form](https://github.com/cjvanlissa/COVID19_metadata); if you are looking to use these data for research - go ahead, and do reach out if you need support in using it!
 
-<iframe width="100%" height="500px" src="https://github.com/cjvanlissa/COVID19_metadata" frameborder="0"></iframe>
+<div class="github-card" data-github="cjvanlissa/COVID19_Metadata" data-width="400" data-height="" data-theme="default"></div>
+<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
